# base-tdb-models

./: .gitignore  README.md  pyproject.toml
talkingdb/models/api/: mode.py
talkingdb/models/auth/: auth.py  user.py
talkingdb/models/document/: document.py  mutations.py  resolver.py
talkingdb/models/document/elements/: element.py
talkingdb/models/document/elements/base/: base.py
talkingdb/models/document/elements/primitive/: paragraph.py  table.py
talkingdb/models/document/indexes/: index.py
talkingdb/models/document/layouts/: layout.py
talkingdb/models/document/placeholders/: placeholder.py
talkingdb/models/event/: event.py  status.py  type.py
talkingdb/models/factory/: update.py
talkingdb/models/graph/: graph.py
talkingdb/models/metadata/: metadata.py
talkingdb/models/utils/: dataclass.py
