[project]
name = "talkingdb-models"
version = "1.0.0"
description = "Shared domain models for TalkingDB ecosystem"
authors = [
    { name = "immkg", email = "mayank.g@smarter.codes" }
]
readme = "README.md"
requires-python = ">=3.12,<3.14"

[tool.poetry]
packages = [{ include = "talkingdb" }]

[tool.poetry.dependencies]
python = ">=3.12,<3.14"

smart-slugify = ">=0.1.2,<0.2.0"
pydantic = { version = ">=2.12.5,<3.0.0", extras = ["email"] }
networkx = "^3.6.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
